# lux

./: .env.example  .gitignore  CHANGELOG.md  IMPLEMENTATION_PLAN.md  Makefile  PLANO_CONSOLIDADO.md  README.md  docker-compose.yml  lux_v2_architecture.md  pyproject.toml  requirements.txt
docs/adr/: ADR-001-aiosqlite.md  ADR-002-serialization.md  ADR-003-slot-management.md  ADR-004-thinking-parser.md  ADR-005-rrf-merge.md  ADR-006-rate-limiting.md  ADR-007-whisper-lifecycle.md  ADR-008-skill-versioning.md  ADR-009-startup-coordinator.md  ADR-010-schema-migrations.md  ADR-011-cold-start.md  ADR-012-liveness-detection.md  ADR-013-voice-profile-sync.md  ADR-014-session-expiry-renewal.md  ADR-015-delete-revoke-sessions.md
lux/: __init__.py  config.py  constants.py  main.py
lux/acp/: __init__.py  protocol.py  server.py
lux/agent/: __init__.py  agent.py  auxiliary_client.py  budget.py  model_router.py  state.py  trajectory.py
lux/auth/: __init__.py  admin_gate.py  first_run.py  jwt_manager.py  models.py  password.py  session_store.py
lux/compression/: __init__.py  compressor.py  lineage.py
lux/cron/: __init__.py  jobs.py  scheduler.py  triggers.py
lux/gateway/: __init__.py  auth.py  delivery.py  pairing.py  runner.py  session_store.py  setup.py
lux/interfaces/: __init__.py  cli.py  desktop_ui.py  protocols.py  voice_ui.py
lux/memory/: __init__.py  manager.py  nudge.py  semantic.py  session_db.py
lux/migrations/: 001_initial.sql  002_auth.sql  003_auth_system.sql  004_platform_links.sql  005_reflection_tables.sql  006_orchestrator_tables.sql
lux/orchestrator/: __init__.py  models.py  (+1 more)
scripts/: _start_services.sh  create_admin.py  download_wakeword_data.sh  lux  lux-cli  setup-lux.sh  setup_models.sh  start.sh  stop.sh  test_wakeword_mic.py  train_wakeword.sh
skills/: browser-control.md  code-review.md  debug-error.md  deploy-docker.md  email-triage.md  form-fill.md  git-workflow.md  plan.md  search-knowledge.md  system-health.md  workflow-skill.md
tests/: conftest.py
(+90 files in other folders)
