[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lux"
version = "1.0.0"
description = "Assistente Pessoal Local com IA — 100% local, MIT"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
authors = [{name = "Lux Contributors"}]
keywords = ["ai", "assistant", "local", "llm", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sentence-transformers>=3.0",
    "qdrant-client>=1.9",
    "redis>=5.0",
    "dataclasses-json>=0.6",
    "apscheduler>=3.0",
    "textual>=0.40",
    "rich>=13.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
voice = [
    "pyaudio>=0.2",
    "webrtcvad>=2.0",
    "openwakeword>=0.6",
    "onnxruntime>=1.17",
    "librosa>=0.10",
    "numpy",
    "sounddevice",
]
gateway = [
    "python-telegram-bot>=21.0",
    "discord.py>=2.3",
    "slack-sdk>=3.0",
]

[project.scripts]
lux = "lux.main:main"
lux-gateway = "lux.main:gateway_main"

[project.urls]
Homepage = "https://github.com/lux-project/lux"
Repository = "https://github.com/lux-project/lux"
Issues = "https://github.com/lux-project/lux/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = false
python_version = "3.11"
ignore_missing_imports = true

[tool.uv]
override-dependencies = [
    "tflite-runtime ; python_version < '3.12'"
]
